--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
   },
